This fixes a bug with a flashing collapse menu.

--- a/refinery/ui/source/styles/refinery-style.less
+++ b/refinery/ui/source/styles/refinery-style.less
@@ -151,10 +151,8 @@ select.select-height {
 .navbar-collapse.collapse#navbarMain {
   height: auto;
   overflow: visible;
-  width: 390px;
   float: left;
   border: none;
-
 }
 
 .collapsing {
